bin_PROGRAMS = main 

AM_CPPFLAGS = -g -Wall -fpermissive -std=c++11 -O0 -I$(srcdir) 
main_SOURCES = main.cpp
				 
main_LDFLAGS = 

main_LDADD =

#libLibShuffler_a_SOURCES = dSFMT.c 
#
#AM_CPPFLAGS = -fno-threadsafe-statics -g -fPIC -DDSFMT_MEXP=19937
#AM_CFLAGS=-g -fPIC -DDSFMT_MEXP=19937
#
#libLibShuffler_a_LIBADD=

