
bin_PROGRAMS = mersenne

AM_CPPFLAGS = -g -Wall -fpermissive -std=c++11 -O0 -I$(srcdir) -DDSFMT_MEXP=19937
mersenne_SOURCES =  mersenne.cpp
				 
mersenne_LDFLAGS = 

mersenne_LDADD =-lrt

#libLibShuffler_a_SOURCES = dSFMT.c 
#
#AM_CPPFLAGS = -fno-threadsafe-statics -g -fPIC -DDSFMT_MEXP=19937
#AM_CFLAGS=-g -fPIC -DDSFMT_MEXP=19937
#
#libLibShuffler_a_LIBADD=

