lib_LTLIBRARIES = libhwmath.la

libhwmath_la_SOURCES = hwmath.c

# In case we need to define include files, or other flags for the
# C preprocessor, we can add them to the following variable
# libhwmath_la_CPPFLAGS = 

# Headers file that are going to be installed in <prefix>/include
# include_HEADERS = 
